--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Landing Page</title>
 
-  <link rel="stylesheet" href="/css/all.css">
   <link rel="stylesheet" href="./css/style.css">
 
-  
+  <script src="https://kit.fontawesome.com/f45daa8e40.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
